# OldCodeColloctions

./: README.md
CUtilities/: CMakeLists.txt  main.c
CUtilities/BasicDataStructure/Includes/: CCBasicString.h  CCDynamicArray.h  CCLinkList.h  CCRange.h  DataStructBasicHeader.h
CUtilities/BasicDataStructure/Sources/: CCBasicString.c  CCDynamicArray.c  CCRange.c
CUtilities/Basic_Utils/Includes/: CCPair.h  CCPlainObject.h  CCSTDLib_BasicUtils.h  CCSTDLib_CompareUtils.h  CCSTDLib_Err.h  CCSTDLib_HandleExports.h  CCSTDLib_Index_Handle.h  CCSTDLib_MallocFree.h  CCSTDLib_SizeUtils.h  CCSTDLib_Types.h  CCSTDLib_Utils.h  CCSTDLibs_MyCompiles.h
CUtilities/Basic_Utils/Sources/: CCPair.c  CCPlainObject.c  CCSTDLib_Index_Handle.c  CCSTD_CmpBasic.c
CUtilities/SystemRelated/Includes/: CCDynamicLoader.h  CCMutex.h  CCSTDLib_FetchError.h  CCSTDLib_MultiByte_WCharAdapter.h  CCThread.h
CUtilities/SystemRelated/Sources/: CCDynamicLoader.c  CCMutex.c  CCSTDLib_FetchError.c  CCSTDLib_MultiByte_WCharAdapter.c  CCThread.c
CUtilities/test/: testDynamicArray.c  testDynamicPlugin.c  tests.h  textMutex.c
CUtilities/test/testSrc/DynamicPlugin/: readme.md
CodesExperiments/: README.md
CodesExperiments/Algorithm_DT_App/Exercise1/: CMakeLists.txt  Module1.hpp  PublicAPI.hpp  test.cpp
CodesExperiments/Algorithm_DT_App/Exercise2/: TestException.cpp
CodesExperiments/Algorithm_DT_App/Exercise3/: 2dArray.hpp  test.cpp
CodesExperiments/Algorithm_DT_App/Exercise4/: Main  main.cpp  recersiveMain.cpp  recersiveMain.h
CodesExperiments/ArmC-Experiments/Exp1/: var.c
CodesExperiments/ArmC-Experiments/Exp2/: heap  heap.c
CodesExperiments/ArmC-Experiments/Exp3/: moveBits  moveBits.c  moveBits2  moveBits2.c
CodesExperiments/ArmC-Experiments/Exp4/: DynamicAntiMain.txt  main.c
CodesExperiments/C++/1/: thread  thread.cpp
CodesExperiments/C++/2/: auto  auto.cpp  auto]ls
CodesExperiments/C++/3/: Makefile  cadd.h  cpptry  cpptry.cpp
CodesExperiments/C++/4/: CCSTD_MemoryList.c  CCSTD_MemoryList.h  CCSTD_Utilitys.h  CMakeLists.txt
CodesExperiments/C++/Cmake/try1/: CMakeLists.txt  Tutorial.cpp  Tutorial2.cpp
CodesExperiments/C++/Cmake/try2/: CMakeLists.txt  TutorialConfig.h.in  Tutorials.cpp
CodesExperiments/C++/Cmake/try2/libsrc/: printLibs.cpp  printLibs.h  printNNums.cpp  printNNums.h
CodesExperiments/C++/Cmake/trySelf/: AutoBuild.sh  CMakeLists.txt  target.cpp  targetlib.h.in
CodesExperiments/C++/Cmake/trySelf/include/: add_minus.h  multipyDivision.h
CodesExperiments/C++/Cmake/trySelf/src/: add.cpp  minus.cpp  multipyDivision.cpp
CodesExperiments/C++/Cmake_2/: AbsrtactProduct.h  CMakeLists.txt  ProductA_Factory.h  ProductB.h
CodesExperiments/C++/Cmake_2/src/: ProductA.cpp  ProductA_Factory.cpp  ProductB.cpp
CodesExperiments/C++/Cmake_3/: CMakeLists.txt  ProductB_Factory.h  file_tree.txt
CodesExperiments/C++/Cmake_4/: CMakeLists.txt  main.cpp
CodesExperiments/C++/Cmake_4/include/: AbstractFactory.h  FactoriesAndProducts.h
CodesExperiments/C++/Cmake_4/install/include/: ProductA.h
CodesExperiments/C++/Cmake_5/: CMakeLists.txt  TryOpencv.cpp
CodesExperiments/Compiling Issue/1/: AntiFunction.s  AntiMain.S  AntiObj.S  demoApp  function.abs  function.c  function.i  function.s  intel_function.s  main.c
CodesExperiments/Compiling Issue/2/: dyuseLib  dyuseLib.c  src.c  src.h
CodesExperiments/Compiling Issue/gdb_use/: error  error.c  main  main.c
CodesExperiments/Effective Modern C++/TemplatesAndAuto/: 1  1.cpp
CodesExperiments/Effective Modern C++/decltype/: 1  1.cpp
CodesExperiments/Effective Modern C++/specialUseOfRefTemp/: 1  1.cpp
CodesExperiments/Effective Modern C++/templatesInfo/: template  templates.cpp
CodesExperiments/Linux/: Reminder.md
CodesExperiments/Linux/1/: copy  copy2.c
CodesExperiments/OS/1/: WriteFloppy.sh  bashsrc  bashsrc.ab  floppy.img  mbr.S  mymbr.s
CodesExperiments/OS/10/: boot.inc  loader.S  loader2.S  printDec.sh
CodesExperiments/OS/11/: Self.sh  boot.inc  loader.S
CodesExperiments/OS/12/: Compile.sh  Load.sh  bashsrc.ab
CodesExperiments/OS/13/: system_call.S
CodesExperiments/OS/14/: Compile.sh
CodesExperiments/OS/15/: Compile.sh
CodesExperiments/OS/15+/: Compile.sh  Load.sh
CodesExperiments/OS/16/: Makefile
CodesExperiments/OS/17/: Makefile
CodesExperiments/OS/18/: Makefile  make.sh
CodesExperiments/OS/19/: 111  Makefile
CodesExperiments/OS/2/: bashsrc.ab
CodesExperiments/OS/20/: makefile
CodesExperiments/OS/3/: res.txt  tryASM.S
CodesExperiments/OS/4/: tryASM.S  tryAntiASM.txt  vstart.S
CodesExperiments/OS/5/: WriteFloppy.sh  a.img  bashsrc  mbr.S
CodesExperiments/OS/6/: call.S  xxd.sh
CodesExperiments/OS/7/: 1  1.c
CodesExperiments/OS/8/: WriteFloppy.sh  bitsDif  bitsDif.S  compile.sh  floppy.img
CodesExperiments/OS/9/: Self.sh  WriteFloopy.sh  loader.S  loader2.S  mbr.S  mbr2.S
CodesExperiments/OS/final/: makefile
CodesExperiments/tcp_ip-easy/SC1/: client.c
CodesExperiments/tcp_ip-easy/SC2/: client.c  server.c
CodesExperiments/tcp_ip-easy/SC3/: CMakeLists.txt  echo_client.c  echo_server.c
CodesExperiments/tcp_ip-easy/SC4/: CMakeLists.txt  client.c  server.c
CodesExperiments/tcp_ip-easy/Utils/: SC_Utils.c  SC_Utils.h
MCU_Projects/: README.md
MCU_Projects/GamesForMCU51/: 2.uvproj  Beep.c  Beep.h  DigitalLED.c  DigitalLED.h  GUI.c  GUI.h  KeyEvent.c  KeyEvent.h  LEDMat.c  LEDMat.h  MatKey.c  MatKey.h  Player.c  UART.c  UART.h  Utilitys.h  defaultAct.c  defaultAct.h  delay.c  delay.h  key.c  key.h  lcd1602.c  lcd1602.h  main.c  obtacle.c  obtacle.h  player.h
MCU_Projects/GamesForMCU51/Listings/: 2.m51  Beep.lst  DigitalLED.lst  GUI.lst  KeyEvent.lst  LEDMat.lst  MatKey.lst  Player.lst  STARTUP.lst  Score.lst  UART.lst  defaultAct.lst  delay.lst  key.lst  lcd1602.lst  main.lst  obtacle.lst
MCU_Projects/LEDMatrix/: Delay.c  Delay.h  Key.c  LEDMatrix.uvgui.陈冠豪  LEDMatrix.uvopt  LEDMatrix.uvproj  MatrixLED.c  MatrixLEd.h  Timer0.c  main.c
MCU_Projects/Timer/: Delay.c  Delay.h  Key.h  Timer.uvgui.陈冠豪  Timer.uvopt  Timer.uvproj  Timer0.h  main.c  showTime.c  showTime.h
(+404 files in other folders)
